(#8): アクティビティの画像をダミーで保存できるよう修正
